--- a/.gitlab/ci/environments/gke130-arm.gitlab-ci.yml
+++ b/.gitlab/ci/environments/gke130-arm.gitlab-ci.yml
@@ -30,8 +30,10 @@ review_gke130a:
   # initially allow arm64 failures
   allow_failure: true
   rules:
-    # Initially we only execute for MRs and Default branch as the only ones
-    # with multiarch images
+    # Initially we only execute for:
+    # * MRs and Default branch 
+    # * Triggered pipelines (from CNG)
+    - if: '$PIPELINE_TYPE == "CANONICAL_FEATURE_BRANCH_PIPELINE" && $CI_PIPELINE_SOURCE == "pipeline" && $TEST_BRANCH == "true"'
     - if: '$PIPELINE_TYPE != "CANONICAL_MR_PIPELINE" && $PIPELINE_TYPE != "CANONICAL_DEFAULT_BRANCH_PIPELINE"'
       when: never
     - !reference [.review_template, rules]
