Support custom container registry TLS cipher suite
These ciphers are only used in TLS 1.2 and older and are ignored for TLS 1.3.

Changelog: added

Relates https://gitlab.com/gitlab-org/container-registry/-/issues/1423

--- a/charts/registry/templates/configmap.yaml
+++ b/charts/registry/templates/configmap.yaml
@@ -25,6 +25,9 @@ data:
         {{- if and .Values.tls.clientCAs (kindIs "slice" .Values.tls.clientCAs) }}
         clientCAs: {{- toYaml .Values.tls.clientCAs | nindent 10 }}
         {{- end }}
+        {{- if and .Values.tls.cipherSuites (kindIs "slice" .Values.tls.cipherSuites) }}
+        ciphersuites: {{- toYaml .Values.tls.cipherSuites | nindent 10 }}
+        {{- end }}
         minimumTLS: {{ default "tls1.2" .Values.tls.minimumTLS | quote }}
       {{- end }}
       {{- if .Values.debug }}
