--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,10 +105,12 @@ include:
   - local: '/.gitlab/ci/environments/gke130.gitlab-ci.yml'
   - local: '/.gitlab/ci/environments/eks.gitlab-ci.yml'
   - local: '/.gitlab/ci/environments/eks130.gitlab-ci.yml'
-  - template: Jobs/Dependency-Scanning.latest.gitlab-ci.yml
-  - template: Jobs/Secret-Detection.latest.gitlab-ci.yml
-  - template: Jobs/SAST.latest.gitlab-ci.yml
-  - template: Jobs/SAST-IaC.latest.gitlab-ci.yml
+  - local: /.gitlab/ci/scanners.yml
+  - local: /.gitlab/ci/validations.yml
+  - local: /.gitlab/ci/checks.yml
+  - local: /.gitlab/ci/specs-common.yml
+  - local: /.gitlab/ci/review-docs.yml
+
   - component: ${CI_SERVER_FQDN}/gitlab-org/components/danger-review/danger-review@1.4.1
     rules:
       - if: '$CI_SERVER_HOST == "gitlab.com"'
@@ -124,19 +126,6 @@ include:
       - if: '$CI_SERVER_HOST != "gitlab.com"'
         when: never
       - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
-
-dependency_scanning:
-  needs: []
-  before_script: []
-secret_detection:
-  needs: []
-  before_script: []
-sast:
-  needs: []
-  before_script: []
-iac-sast:
-  needs: []
-  before_script: []
 
 tag_auto_deploy:
   stage: staging-release
@@ -166,94 +155,6 @@ update-trigger-branch:
   rules:
     - if: '$PIPELINE_TYPE == "CANONICAL_DEFAULT_BRANCH_PIPELINE"'
     - if: '$TRIGGER_UPDATE'  # Allow us to manually trigger this job in a pipeline if we wish using this CI variable
-
-lint_package:
-  stage: preflight
-  when: always
-  script:
-    - kubectl version --client=true --output=json
-    - helm version --template='Helm Version - {{.Version}}'
-    - helm repo add gitlab https://charts.gitlab.io
-    - helm repo add jetstack https://charts.jetstack.io
-    - helm dependency update
-    - echo "$HELM_DEFAULT_SETTINGS" | tee ./template_settings.yaml
-    - echo "$HELM_SETTINGS" | tee -a ./template_settings.yaml
-    - helm lint -f ./template_settings.yaml
-    - mkdir -p build
-    - helm package -d build .
-  artifacts:
-    expire_in: 3d
-    paths:
-    - build
-  rules:
-    - if: '$PIPELINE_TYPE == "DOCS_PIPELINE"'
-    - if: '$PIPELINE_TYPE =~ /_MR_PIPELINE$/'
-    - if: '$PIPELINE_TYPE =~ /_BRANCH_PIPELINE$/'
-    - if: '$PIPELINE_TYPE == "NIGHTLY_PIPELINE"'
-    - if: '$PIPELINE_TYPE == "AUTO_DEPLOY_PIPELINE"'
-    - if: '$PIPELINE_TYPE == "RELEASE_PIPELINE"'
-
-.kubeconform:
-  stage: preflight
-  when: always
-  script:
-    - kubectl version --client=true --output=json
-    - helm version --template='{{.Version}}'
-    - helm plugin list
-    - helm repo add gitlab https://charts.gitlab.io
-    - helm repo add jetstack https://charts.jetstack.io
-    - helm dependency update
-    - echo "$HELM_DEFAULT_SETTINGS" | tee ./template_settings.yaml
-    - echo "$HELM_SETTINGS" | tee -a ./template_settings.yaml
-    - echo "${KUBECONFORM_SCHEMA_LOCATION:-default}"
-    - >
-      helm kubeconform --strict --summary
-      -f ./template_settings.yaml
-      --kubernetes-version $KUBE_VERSION
-      --schema-location "${KUBECONFORM_SCHEMA_LOCATION:-default}"
-      --schema-location "$KUBE_CRD_SCHEMA_URL"
-      --output json
-      .
-  rules:
-    - if: '$PIPELINE_TYPE == "DOCS_PIPELINE"'
-    - if: '$PIPELINE_TYPE =~ /_MR_PIPELINE$/'
-    - if: '$PIPELINE_TYPE =~ /_BRANCH_PIPELINE$/'
-    - if: '$PIPELINE_TYPE == "NIGHTLY_PIPELINE"'
-  needs: ['lint_package']
-
-"Validate 1.28.3":
-  extends: .kubeconform
-  variables:
-    KUBE_VERSION: "1.28.3"
-    HELM_SETTINGS: |
-      global:
-        ingress:
-          apiVersion: networking.k8s.io/v1
-        pdb:
-          apiVersion: policy/v1
-        hpa:
-          apiVersion: autoscaling/v2
-        batch:
-          cronJob:
-            apiVersion: batch/v1
-
-"Validate 1.29.4":
-  extends: .kubeconform
-  variables:
-    KUBE_VERSION: "1.29.4"
-    HELM_SETTINGS: !reference ["Validate 1.28.3", variables, HELM_SETTINGS]
-
-"Validate 1.30.1":
-  extends: .kubeconform
-  variables:
-    KUBE_VERSION: "1.30.1"
-    HELM_SETTINGS: !reference ["Validate 1.28.3", variables, HELM_SETTINGS]
-
-"Validate 1.31.1":
-  extends: .kubeconform
-  variables:
-    KUBE_VERSION: "1.31.1"
-    HELM_SETTINGS: !reference ["Validate 1.28.3", variables, HELM_SETTINGS]
 
 approve_cluster_tests:
   stage: approve-review-apps
@@ -369,120 +270,6 @@ pin_image_versions:
   rules:
     - !reference [.review_template, rules]
 
-rubocop:
-  image: ruby:3.1-alpine
-  stage: prepare
-  dependencies: []
-  before_script:
-    - apk add make gcc libc-dev
-  script:
-    - bundle config set --local path 'gems'
-    - bundle config set --local frozen 'true'
-    - bundle install -j $(nproc)
-    - bundle exec rubocop --parallel
-  cache:
-    key: "debian-${DEBIAN_VERSION}-ruby-${RUBY_VERSION}-${CI_JOB_NAME}"
-    paths:
-    - gems
-  rules:
-    - if: '$PIPELINE_TYPE =~ /MR_PIPELINE$/'
-    - if: '$PIPELINE_TYPE =~ /BRANCH_PIPELINE$/'
-    - if: '$PIPELINE_TYPE == "DOCS_PIPELINE"'
-
-# Perform content linting on documentation Markdown files
-check_docs_content:
-  image: registry.gitlab.com/gitlab-org/gitlab-docs/lint-markdown:alpine-3.20-vale-3.7.1-markdownlint2-0.14.0-lychee-0.15.1
-  stage: prepare
-  cache: {}
-  dependencies: []
-  before_script: []
-  script:
-    # Lint prose
-    - vale --minAlertLevel error doc
-  rules:
-    - if: '$PIPELINE_TYPE == "DOCS_PIPELINE"'
-    - if: '$PIPELINE_TYPE =~ /MR_PIPELINE$/'
-    - if: '$PIPELINE_TYPE =~ /BRANCH_PIPELINE$/'
-
-# Perform linting on documentation Markdown files
-check_docs_markdown:
-  image: registry.gitlab.com/gitlab-org/gitlab-docs/lint-markdown:alpine-3.20-vale-3.7.1-markdownlint2-0.14.0-lychee-0.15.1
-  stage: prepare
-  cache: {}
-  dependencies: []
-  before_script: []
-  script:
-    # Lint Markdown
-    - markdownlint-cli2 'doc/**/*.md'
-  rules:
-    - if: '$PIPELINE_TYPE == "DOCS_PIPELINE"'
-    - if: '$PIPELINE_TYPE =~ /MR_PIPELINE$/'
-    - if: '$PIPELINE_TYPE =~ /BRANCH_PIPELINE$/'
-
-# Perform link checking on documentation Markdown files
-check_docs_links:
-  image: registry.gitlab.com/gitlab-org/gitlab-docs/lint-markdown:alpine-3.20-vale-3.7.1-markdownlint2-0.14.0-lychee-0.15.1
-  stage: prepare
-  cache: {}
-  dependencies: []
-  before_script: []
-  script:
-    # Check Markdown links
-    - lychee --offline --include-fragments doc
-  rules:
-    - if: '$PIPELINE_TYPE == "DOCS_PIPELINE"'
-    - if: '$PIPELINE_TYPE =~ /MR_PIPELINE$/'
-    - if: '$PIPELINE_TYPE =~ /BRANCH_PIPELINE$/'
-
-.review-docs:
-  image: ruby:3.1-alpine
-  stage: review
-  cache: {}
-  dependencies: []
-  before_script:
-  - gem install gitlab --no-doc
-  # We need to download the script rather than clone the repo since the
-  # review-docs-cleanup job will not be able to run when the branch gets
-  # deleted (when merging the MR).
-  - apk add --update openssl
-  - wget https://gitlab.com/gitlab-org/gitlab/-/raw/master/scripts/trigger-build.rb
-  - chmod 755 trigger-build.rb
-  variables:
-    GIT_STRATEGY: none
-    DOCS_REVIEW_APPS_DOMAIN: docs.gitlab-review.app
-    DOCS_GITLAB_REPO_SUFFIX: charts
-    # By default, deploy the Review App using the `main` branch of the `gitlab-org/gitlab-docs` project
-    DOCS_BRANCH: main
-  when: manual
-  rules:
-    - if: '$PIPELINE_TYPE =~ /MR_PIPELINE$/'
-    - if: '$PIPELINE_TYPE =~ /FEATURE_BRANCH_PIPELINE$/'
-    - if: '$PIPELINE_TYPE == "DOCS_PIPELINE"'
-
-# Trigger a docs build in gitlab-docs
-# Useful to preview the docs changes live
-# https://docs.gitlab.com/ee/development/documentation/review_apps.html
-review-docs-deploy:
-  extends:
-  - .review-docs
-  environment:
-    name: review-docs/mr-${CI_MERGE_REQUEST_IID}
-    url: https://${DOCS_BRANCH}-${DOCS_GITLAB_REPO_SUFFIX}-${CI_MERGE_REQUEST_IID}.${DOCS_REVIEW_APPS_DOMAIN}/${DOCS_GITLAB_REPO_SUFFIX}
-    auto_stop_in: 2 weeks
-    on_stop: review-docs-cleanup
-  script:
-  - ./trigger-build.rb docs deploy
-
-# Cleanup remote environment of gitlab-docs
-review-docs-cleanup:
-  extends:
-  - .review-docs
-  environment:
-    name: review-docs/mr-${CI_MERGE_REQUEST_IID}
-    action: stop
-  script:
-  - ./trigger-build.rb docs cleanup
-
 # ---------------------------------------------------------------------------
 
 .specs: &specs
@@ -519,17 +306,6 @@ review-docs-cleanup:
     - if: '$PIPELINE_TYPE =~ /STABLE_BRANCH_PIPELINE$/'
     - if: '$PIPELINE_TYPE =~ /FEATURE_BRANCH_PIPELINE$/'
     - if: '$PIPELINE_TYPE == "QA_KNAPSACK_UPDATE_PIPELINE"'
-
-specs_without_cluster:
-  extends: .specs
-  variables:
-    RSPEC_TAGS: ~type:feature
-  parallel: 6
-  rules:
-    - !reference [.specs, rules]
-    - if: '$PIPELINE_TYPE == "AUTO_DEPLOY_PIPELINE"'
-    - if: '$PIPELINE_TYPE == "RELEASE_PIPELINE"'
-  needs: ['lint_package']
 
 .qa:
   image: registry.gitlab.com/gitlab-org/gitlab-omnibus-builder/distribution_ci_tools:${CI_TOOLS_VERSION}
